--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,47 @@ body {
 h1 {
   font-family: "Anton", sans-serif;
 }
+
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Raleway", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: linen;
+}
+
+main {
+  display: grid;
+  grid-template-columns: minmax(2rem, 1fr) minmax(min-content, 94rem) minmax(
+      2rem,
+      1fr
+    );
+  /* Creates 3 columns, where the middle is at least 94rem wide, and the first and last are at least 2rems, but no more than 1 fractional unit of the remaining space in the grid-container. */
+  row-gap: 3rem;
+}
+
+.heading {
+  grid-column: 2 / 3;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 1.5rem;
+}
+
+.text {
+  grid-column: 2 / 3;
+}
+
+.hero {
+  grid-column: 1 / -1; /* Tells element to span full width of the grid (without knowing the exact number) */
+  position: relative;
+}
+
+img {
+  width: 100%;
+  object-fit: cover;
+}
