--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,18 @@ main {
   position: relative;
 }
 
+.hero-title {
+  text-align: center;
+  font-size: 8rem;
+  color: orangered;
+}
+
+.hero-subtitle {
+  text-align: center;
+  font-size: 2.4rem;
+  color: orangered;
+}
+
 img {
   width: 100%;
   object-fit: cover;
