added a changing background-color feature to .author using the hover pseudoclass. Changed publish date to lighter color.

--- a/styles.css
+++ b/styles.css
@@ -75,3 +75,16 @@ img {
   width: 100%;
   object-fit: cover;
 }
+
+.author {
+  font-size: 2rem;
+  font-family: "Raleway", sans-serif;
+}
+
+.author-name a:hover {
+  background-color: #306203;
+}
+
+.publish-date {
+  color: rgba(255, 255, 255, 0.5);
+}
