--- a/styles.css
+++ b/styles.css
@@ -88,3 +88,10 @@ img {
 .publish-date {
   color: rgba(255, 255, 255, 0.5);
 }
+
+.social-icons {
+  display: grid;
+  font-size: 3rem;
+  grid-template-columns: repeat(5, 1fr);
+  grid-auto-flow: column; /*Tells the algorithm to create new columns as needed. */
+}
