--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,8 @@ main {
 
 .text {
   grid-column: 2 / 3;
+  font-size: 1.8rem;
+  letter-spacing: 0.6px;
 }
 
 .hero {
@@ -92,6 +94,10 @@ img {
 .social-icons {
   display: grid;
   font-size: 3rem;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(5, 1fr); /*Defines the cols and width of cols*/
+  /*The repeat() function used above is saying: 'repeat the track list 5 times, make each 1 fractional unit in width'.*/
+  grid-auto-columns: 1fr; /*Overrides the default width of 'auto'. Sets it to 1fr.*/
   grid-auto-flow: column; /*Tells the algorithm to create new columns as needed. */
+
+  align-items: center;
 }
