--- a/styles.css
+++ b/styles.css
@@ -115,3 +115,9 @@ hr {
   margin: 1.5rem 0;
   border: 1px solid rgba(120, 120, 120, 0.6);
 }
+
+.quote {
+  color: #00beef;
+  text-align: center;
+  font-size: 2.4rem;
+}
