--- a/styles.css
+++ b/styles.css
@@ -120,4 +120,19 @@ hr {
   color: #00beef;
   text-align: center;
   font-size: 2.4rem;
+  font-family: "Raleway", sans-serif;
+}
+
+.quote::before {
+  content: '" ';
+}
+
+.quote::after {
+  content: ' "';
+}
+
+.text-with-images {
+  display: grid;
+  grid-template-columns: 1fr 2fr; /*splits page horizontally into 3rds, giving the first column 1 fractional unit (1/3) and the second 2 fractional units (2/3) */
+  column-gap: 3rem;
 }
