--- a/styles.css
+++ b/styles.css
@@ -140,4 +140,22 @@ hr {
 
 .lists {
   list-style-type: none;
+  margin-top: 2rem;
+}
+
+.lists li {
+  margin-bottom: 1.5rem;
+}
+
+.list-title,
+.list-subtitle {
+  color: #00beef;
+}
+
+.image-wrapper {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: repeat(3, min-content);
+  gap: 2rem;
+  place-items: center; /*Shorthand for align-items and justify-items*/
 }
